1896.	[bug]		The cache could delete expired records too fast for
			clients with a virtual time in the past. [RT #14991]

1895.	[bug]		fctx_create() could return success even though it
			failed. [RT #14993]

1894.	[func]		dig: report the number of extra bytes still left in
			the packet after processing all the records.

1893.	[cleanup]	dighost.c: move external declarations into <dig/dig.h>.

1892.	[bug]		dnssec-signzone, dnssec-keygen: handle negative debug
			levels. [RT #14962]

1891.	[func]		Limit the number of recursive clients that can be
			waiting for a single query (<qname,qtype,qclass>) to
			resolve.  New options clients-per-query and
			max-clients-per-query.

1890.	[func]		Add a system test for named-checkconf. [RT #14931]

1889.	[func]		The lame cache is now done on a <qname,qclass,qtype>
			basis as some servers only appear to be lame for
			certain query types.  [RT #14916]

1888.	[func]		"USE INTERNAL MALLOC" is now runtime selectable.
			[RT #14892]

1887.	[func]		Detect duplicates of UDP queries we are recursing on
			and drop them.  New stats category "duplicates".
			[RT #2471]

1886.	[bug]		Fix unreasonably low quantum on call to
			dns_rbt_destroy2().  Remove unnecessay unhash_node()
			call. [RT #14919]

1885.	[func]		Additional memory debugging support to track size
			and mctx arguements. [RT #14814]

1884.	[bug]		process_dhtkey() was using the wrong memory context
			to free some memory. [RT #14890]

1883.	[port]		sunos: portability fixes. [RT #14814]

1882.	[port]		win32: isc__errno2result() now reports its caller.
			[RT #13753]

1881.	[port]		win32: Handle ERROR_NETNAME_DELETED.  [RT #13753]

1880.	[placeholder]

1879.	[func]		Added framework for handling multiple EDNS versions.
			[RT #14873]

1878.	[func]		dig can now specify the EDNS version when making
			a query. [RT #14873]

1868.	[func]		edns-udp-size can now be overridden on a per
			server basis. [RT #14851]

1867.	[bug]		It was possible to trigger a INSIST in